--- a/package.json
+++ b/package.json
@@ -9,11 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.4",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
+    "keyboard-shortcut": "^1.2.0",
+    "mousetrap": "^1.6.5",
     "next": "13.3.1",
+    "next-google-fonts": "^2.2.0",
+    "node-sass": "^8.0.0",
     "postcss": "8.4.23",
+    "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-hotkeys": "^2.0.0",
+    "tailwindcss": "3.3.1",
+    "tailwindcss-truncate-multiline": "^1.0.3"
   }
 }
